templates e rotas e links
Signed-off-by: Helder Santos <heldersantos@bemol.com.br>

--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,2 +1,11 @@
+{% extends 'layout.html' %} {% block content %}
 <h1>Listagem de posts</h1>
-{{ name }}
+
+<ul>
+  {% for post in posts %}
+  <li>
+    <a href="{% url 'post_show' post.id %}">{{ post.title }}</a>
+  </li>
+  {% endfor %}
+</ul>
+{% endblock content %}
