--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,20 @@
     <title>Django</title>
   </head>
   <body>
-    <h1><a href="{% url 'post_list'%}">Postagens</a></h1>
+    <h1>
+      <a href="{% url 'post_list'%}">Postagens</a>
+    </h1>
+    <h1>
+      <a>Categorias</a>
+    </h1>
+
+    <span>
+      {% for category in categories %}
+      <a href=" {% url 'post_list' %}?category_id={{ category.id }}">
+        {{category.name}}
+      </a>
+      {% endfor %}
+    </span>
 
     {% block content %} {% endblock content %}
 
